--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="skeletonApp">
+<html lang="en" ng-app="moneyApp">
 <head>
 	<meta charset="utf-8">
 	<title>AngularJS Skeleton</title>
@@ -7,8 +7,14 @@
 	<script src="/scripts/angular/angular.js"></script>
 	<script src="/scripts/angular-route/angular-route.js"></script>
 
+	<script src="js/sha256.js"></script>
 	<script src="js/main.js"></script>
+
 	<script src="js/controllers/mainController.js"></script>
+	<script src="js/controllers/loginController.js"></script>
+	<script src="js/controllers/registerController.js"></script>
+
+	<script src="js/services/userService.js"></script>
 </head>
 <body>
 	<h1>Welcome to AngularJS Skeleton App</h1>
