Login and register workflow complete

--- a/client/index.html
+++ b/client/index.html
@@ -11,13 +11,19 @@
 	<script src="js/main.js"></script>
 
 	<script src="js/controllers/mainController.js"></script>
+	<script src="js/controllers/mainViewController.js"></script>
 	<script src="js/controllers/loginController.js"></script>
 	<script src="js/controllers/registerController.js"></script>
 
 	<script src="js/services/userService.js"></script>
+
+	<script src="js/factories/userStore.js"></script>
 </head>
 <body>
-	<h1>Welcome to AngularJS Skeleton App</h1>
+	<h1>Welcome to Money Management App</h1>
+	<div ng-show="isLoggedIn" ng-controller="mainViewController">
+		Logged in as {{ username }}
+	</div>
 	<div ng-view>
 	</div>
 </body>
