Added api for expenses

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
 <body>
 	<h1>Welcome to Money Management App</h1>
 	<div ng-show="isLoggedIn" ng-controller="mainViewController">
-		Logged in as {{ username }}
+		Logged in as {{ name }}
 	</div>
 	<div ng-view>
 	</div>
