--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="moneyApp">
 <head>
 	<meta charset="utf-8">
-	<title>AngularJS Skeleton</title>
+	<title>Money Management</title>
 	<link rel="stylesheet" href="styles/main.css">
 	<script src="/scripts/angular/angular.js"></script>
 	<script src="/scripts/angular-route/angular-route.js"></script>
@@ -31,6 +31,9 @@
 			<tr>
 				<td>
 					<a href="#/addExpense">Add expense</a>
+				</td>
+				<td>
+					<a href="#/getExpense">Expenses</a>
 				</td>
 			</tr>
 		</table>
