add label for new and existing transactions

--- a/client/index.html
+++ b/client/index.html
@@ -15,9 +15,11 @@
 	<script src="js/controllers/loginController.js"></script>
 	<script src="js/controllers/registerController.js"></script>
 	<script src="js/controllers/expenseController.js"></script>
+	<script src="js/controllers/labelController.js"></script>
 
 	<script src="js/services/userService.js"></script>
 	<script src="js/services/expenseService.js"></script>
+	<script src="js/services/labelService.js"></script>
 
 	<script src="js/factories/userStore.js"></script>
 </head>
@@ -34,6 +36,12 @@
 				</td>
 				<td>
 					<a href="#/getExpense">Expenses</a>
+				</td>
+				<td>
+					<a href="#/createLabel">Create Label</a>
+				</td>
+				<td>
+					<a href="#/labels">Labels</a>
 				</td>
 			</tr>
 		</table>
